# FH6-Wheelspin-Farm-Bot

./: .gitignore  README.md  package-lock.json  package.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/core-bot/: Cargo.toml
src-tauri/core-bot/recordings/: stick_left_x_neg_fast_01.npy  stick_left_x_neg_fast_02.json  stick_left_x_neg_fast_02.npy  stick_left_x_neg_fast_05.npy  stick_left_x_neg_slow_01.npy  stick_left_x_neg_slow_03.json  stick_left_x_neg_slow_04.npy  stick_left_x_neg_slow_05.json  stick_left_x_neg_slow_05.npy  stick_left_x_pos_fast_01.json  stick_left_x_pos_fast_02.json  stick_left_x_pos_fast_03.json  stick_left_x_pos_fast_03.npy  stick_left_x_pos_fast_05.npy  stick_left_x_pos_slow_01.npy  stick_left_x_pos_slow_02.json  stick_left_x_pos_slow_02.npy  stick_left_x_pos_slow_03.json  stick_left_x_pos_slow_04.json  stick_left_x_pos_slow_04.npy  stick_left_x_pos_slow_05.json  stick_left_y_neg_fast_05.npy  stick_left_y_pos_fast_02.json  stick_left_y_pos_fast_02.npy  stick_left_y_pos_fast_04.npy  stick_left_y_pos_fast_05.npy  stick_right_x_neg_fast_01.json  stick_right_x_neg_fast_01.npy  stick_right_x_neg_fast_02.npy  stick_right_x_neg_fast_05.npy  stick_right_x_pos_fast_01.npy  stick_right_x_pos_fast_02.json  stick_right_x_pos_fast_06.json  stick_right_x_pos_fast_06.npy  stick_right_y_neg_fast_01.json  stick_right_y_neg_fast_03.json  stick_right_y_neg_fast_04.npy  stick_right_y_neg_fast_05.json  stick_right_y_neg_fast_05.npy  stick_right_y_pos_fast_01.json  (+16 more)
src-tauri/core-bot/src/: config.rs  lib.rs  state_machine.rs  vision.rs
src-tauri/core-bot/src/stages/: mod.rs  nav_to_stage2.rs  nav_to_stage3.rs  stage1_colossus.rs  stage2_skill_points.rs  stage3_buy_cars.rs
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/recordings/: stick_left_x_neg_fast_01.json  stick_left_x_neg_fast_03.json  stick_left_x_neg_fast_03.npy  stick_left_x_neg_fast_04.json  stick_left_x_neg_fast_04.npy  stick_left_x_neg_fast_05.json  stick_left_x_neg_slow_01.json  stick_left_x_neg_slow_02.json  stick_left_x_neg_slow_02.npy  stick_left_x_neg_slow_03.npy  stick_left_x_neg_slow_04.json  stick_left_x_pos_fast_01.npy  stick_left_x_pos_fast_02.npy  stick_left_x_pos_fast_04.json  stick_left_x_pos_fast_04.npy  stick_left_x_pos_fast_05.json  stick_left_x_pos_slow_01.json  stick_left_x_pos_slow_03.npy  stick_left_x_pos_slow_05.npy  stick_left_y_neg_fast_01.json  stick_left_y_neg_fast_01.npy  stick_left_y_neg_fast_02.json  stick_left_y_neg_fast_02.npy  stick_left_y_neg_fast_03.json  stick_left_y_neg_fast_03.npy  stick_left_y_neg_fast_04.json  stick_left_y_neg_fast_04.npy  stick_left_y_neg_fast_05.json  stick_left_y_pos_fast_01.json  stick_left_y_pos_fast_01.npy  stick_left_y_pos_fast_03.json  stick_left_y_pos_fast_03.npy  stick_left_y_pos_fast_04.json  stick_left_y_pos_fast_05.json  stick_right_x_neg_fast_02.json  stick_right_x_neg_fast_03.json  stick_right_x_neg_fast_03.npy  stick_right_x_neg_fast_04.json  stick_right_x_neg_fast_04.npy  stick_right_x_neg_fast_05.json  (+38 more)
src-tauri/src/: capture.rs  controller.rs  lib.rs  main.rs  playback.rs
src-tauri/src/stages/: mod.rs  nav_to_stage1.rs  nav_to_stage4.rs  stage4_spend_sp.rs
src/lib/: mock.ts
src/lib/design/: BotHeader.svelte  ChooseCarModal.svelte  ControlSidebar.svelte  LogConsole.svelte  SettingsModal.svelte  StageCard.svelte  StageMap.svelte  StartNoticeModal.svelte  StatusPill.svelte  WelcomeModal.svelte
src/routes/: +page.svelte
src/routes/design/: +page.svelte
