[package]
name = "fh6-wheelspin-farm-bot"
version = "0.1.0"
description = "FH6 Wheelspin Farm Bot"
authors = []
edition = "2021"

[lib]
name = "fh6_wheelspin_farm_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "GearMetrics"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
vigem-client = "0.1.0"
dxgi-capture-rs = "1.2.2"
rsruckig = "0.1.3"
noise = "0.9.0"
rand = "0.8"
rand_distr = "0.4"
image = "0.25"
imageproc = "0.25"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Foundation", "Win32_Graphics_Gdi"] }
chrono = "0.4"

[profile.release]
opt-level = "z"      # оптимизация на минимальный размер кода (вместо скорости)
lto = true           # Link-Time Optimization — убирает мёртвый код между крейтами
strip = true         # убирает debug-символы из финального бинаря
codegen-units = 1    # единый блок кодогенерации — максимальный эффект LTO
panic = "abort"      # без раскрутки стека — убирает unwind-таблицы

[profile.dev]
opt-level = 2        # ускоряет выполнение собственного кода в dev режиме в 10+ раз

[profile.dev.package."*"]
opt-level = 3        # компилирует библиотеки обработки изображений с максимальной скоростью в dev режиме

