[package]
name = "free-bot"
version = "1.0.1"
description = "FH6 Free Bot"
authors = []
edition = "2021"

[workspace]
members = [
    "core-bot"
]

[lib]
name = "free_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "GearMetrics"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vigem-client = "0.1.0"
image = "0.25"
core-bot = { path = "core-bot" }

[profile.release]
opt-level = "z"      # оптимизация на минимальный размер кода (вместо скорости)
lto = true           # Link-Time Optimization — убирает мёртвый код между крейтами
strip = true         # убирает debug-символы из финального бинаря
codegen-units = 1    # единый блок кодогенерации — максимальный эффект LTO
panic = "abort"      # без раскрутки стека — убирает unwind-таблицы

[profile.dev]
opt-level = 2        # ускоряет выполнение собственного кода в dev режиме в 10+ раз

[profile.dev.package."*"]
opt-level = 3        # компилирует библиотеки обработки изображений с максимальной скоростью в dev режиме
