[package]
name = "core-bot"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "core_bot"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
vigem-client = "0.1.0"
dxgi-capture-rs = "1.2.2"
rsruckig = "0.1.3"
noise = "0.9.0"
rand = "0.8"
rand_distr = "0.4"
image = "0.25"
imageproc = "0.25"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Foundation", "Win32_Graphics_Gdi"] }
chrono = "0.4"
